--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
         >
         <nav class="main-navigation">
           <ul class="navigation-list">
-            <li>
-              <a class="navigation-link" href="./index.html">Studio</a>
+            <li class="navigation-list-item">
+              <a class="navigation-link current" href="./index.html">Studio</a>
             </li>
-            <li><a class="navigation-link" href="#">Portfolio</a></li>
-            <li><a class="navigation-link" href="#">Contacts</a></li>
+            <li class="navigation-list-item">
+              <a class="navigation-link" href="#">Portfolio</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-link" href="#">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="main-contacts">
@@ -78,6 +82,11 @@
           <h2 class="about-main-title visually-hidden">Our Features</h2>
           <ul class="about-list">
             <li class="about-list-item">
+              <div class="about-list-icon">
+                <svg width="64" height="64" class="about-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Strategy</h3>
               <p class="about-text">
                 Our goal is to identify the business problem to walk away with
@@ -85,6 +94,11 @@
               </p>
             </li>
             <li class="about-list-item">
+              <div class="about-list-icon">
+                <svg width="64" height="64" class="about-icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Punctuality</h3>
               <p class="about-text">
                 Bring the key message to the brand's audience for the best price
@@ -92,6 +106,11 @@
               </p>
             </li>
             <li class="about-list-item">
+              <div class="about-list-icon">
+                <svg width="64" height="64" class="about-icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Diligence</h3>
               <p class="about-text">
                 Research and confirm brands with the strongest digital growth
@@ -99,6 +118,11 @@
               </p>
             </li>
             <li class="about-list-item">
+              <div class="about-list-icon">
+                <svg width="64" height="64" class="about-icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Technologies</h3>
               <p class="about-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -126,6 +150,30 @@
               <div class="team-description">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-role">Product Designer</p>
+                <div class="team-social-container">
+                  <ul class="social-link-list">
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list">
@@ -138,6 +186,30 @@
               <div class="team-description">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-role">Frontend Developer</p>
+                <div class="team-social-container">
+                  <ul class="social-link-list">
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list">
@@ -150,6 +222,30 @@
               <div class="team-description">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-role">Marketing</p>
+                <div class="team-social-container">
+                  <ul class="social-link-list">
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list">
@@ -162,6 +258,30 @@
               <div class="team-description">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-role">UI Designer</p>
+                <div class="team-social-container">
+                  <ul class="social-link-list">
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
