--- a/index.html
+++ b/index.html
@@ -152,25 +152,49 @@
                 <p class="team-role">Product Designer</p>
                 <div class="team-social-container">
                   <ul class="social-link-list">
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://instagram.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://twitter.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://facebook.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://linkedin.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -188,25 +212,49 @@
                 <p class="team-role">Frontend Developer</p>
                 <div class="team-social-container">
                   <ul class="social-link-list">
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://instagram.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://twitter.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://facebook.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://linkedin.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -224,25 +272,49 @@
                 <p class="team-role">Marketing</p>
                 <div class="team-social-container">
                   <ul class="social-link-list">
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://instagram.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://twitter.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://facebook.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://linkedin.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -260,25 +332,49 @@
                 <p class="team-role">UI Designer</p>
                 <div class="team-social-container">
                   <ul class="social-link-list">
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://instagram.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://twitter.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://facebook.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li class="team-social-link">
-                      <svg width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-link"
+                        href="https://linkedin.com"
+                        target="_blank"
+                      >
+                        <svg width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -295,73 +391,119 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-container">
             <li class="portfolio-list">
-              <img
-                src="./images/our_portfolio/banking.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/our_portfolio/banking.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
+                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
+                  reiciendis. Culpa ea autem voluptatum?
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-product">Banking App</h3>
                 <p class="portfolio-projects">App</p>
               </div>
             </li>
             <li class="portfolio-list">
-              <img
-                src="./images/our_portfolio/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/our_portfolio/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-product">Cashless Payment</h3>
                 <p class="portfolio-projects">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list">
-              <img
-                src="./images/our_portfolio/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/our_portfolio/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
+                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
+                  reiciendis. Culpa ea autem voluptatum?
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-product">Meditation App</h3>
                 <p class="portfolio-projects">App</p>
               </div>
             </li>
             <li class="portfolio-list">
-              <img
-                src="./images/our_portfolio/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/our_portfolio/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
+                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
+                  reiciendis. Culpa ea autem voluptatum?
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-product">Taxi Service</h3>
                 <p class="portfolio-projects">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list">
-              <img
-                src="./images/our_portfolio/screen_illustration.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/our_portfolio/screen_illustration.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
+                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
+                  reiciendis. Culpa ea autem voluptatum?
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-product">Screen Illustrations</h3>
                 <p class="portfolio-projects">Design</p>
               </div>
             </li>
             <li class="portfolio-list">
-              <img
-                src="./images/our_portfolio/online_courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/our_portfolio/online_courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
+                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
+                  reiciendis. Culpa ea autem voluptatum?
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-product">Online Courses</h3>
                 <p class="portfolio-projects">Marketing</p>
