--- a/index.html
+++ b/index.html
@@ -399,10 +399,9 @@
                   height="300"
                 />
                 <p class="portfolio-overlay-item">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
-                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
-                  reiciendis. Culpa ea autem voluptatum?
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-border">
@@ -438,10 +437,9 @@
                   height="300"
                 />
                 <p class="portfolio-overlay-item">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
-                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
-                  reiciendis. Culpa ea autem voluptatum?
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-border">
@@ -458,10 +456,9 @@
                   height="300"
                 />
                 <p class="portfolio-overlay-item">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
-                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
-                  reiciendis. Culpa ea autem voluptatum?
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-border">
@@ -478,10 +475,9 @@
                   height="300"
                 />
                 <p class="portfolio-overlay-item">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
-                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
-                  reiciendis. Culpa ea autem voluptatum?
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-border">
@@ -498,10 +494,9 @@
                   height="300"
                 />
                 <p class="portfolio-overlay-item">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                  dolor fuga quisquam nostrum, tempore repellat reiciendis.
-                  Repellat earum pariatur fugit vitae, eligendi et velit itaque
-                  reiciendis. Culpa ea autem voluptatum?
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-border">
@@ -516,14 +511,65 @@
     </main>
     <!-- #region footer-->
     <footer class="footer-block">
-      <div class="container footer-container">
-        <a class="footer-logo" href="./index.html"
-          ><span class="logo-main-color">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-block-item">
+        <div class="footer-container">
+          <a class="footer-logo" href="./index.html"
+            ><span class="logo-main-color">Web</span>Studio</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <h3 class="footer-social-title">Social media</h3>
+          <ul class="footer-social-list">
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://instagram.com"
+                target="_blank"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://twitter.com"
+                target="_blank"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://facebook.com"
+                target="_blank"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://linkedin.com"
+                target="_blank"
+              >
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- #endregion footer-->
