--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           </p>
         </div>
         <div class="footer-social-container">
-          <h3 class="footer-social-title">Social media</h3>
+          <p class="footer-social-title">Social media</p>
           <ul class="footer-social-list">
             <li>
               <a
