--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         href="https://instagram.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -169,7 +169,7 @@
                         href="https://twitter.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -180,7 +180,7 @@
                         href="https://facebook.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -191,7 +191,7 @@
                         href="https://linkedin.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -218,7 +218,7 @@
                         href="https://instagram.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -229,7 +229,7 @@
                         href="https://twitter.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -240,7 +240,7 @@
                         href="https://facebook.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -251,7 +251,7 @@
                         href="https://linkedin.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -278,7 +278,7 @@
                         href="https://instagram.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -289,7 +289,7 @@
                         href="https://twitter.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -300,7 +300,7 @@
                         href="https://facebook.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -311,7 +311,7 @@
                         href="https://linkedin.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -338,7 +338,7 @@
                         href="https://instagram.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -349,7 +349,7 @@
                         href="https://twitter.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -360,7 +360,7 @@
                         href="https://facebook.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -371,7 +371,7 @@
                         href="https://linkedin.com"
                         target="_blank"
                       >
-                        <svg width="16" height="16">
+                        <svg class="team-social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -530,7 +530,7 @@
                 href="https://instagram.com"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -541,7 +541,7 @@
                 href="https://twitter.com"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -552,7 +552,7 @@
                 href="https://facebook.com"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -563,7 +563,7 @@
                 href="https://linkedin.com"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
